Image alignment issue

--- a/resources/style.css
+++ b/resources/style.css
@@ -5,8 +5,8 @@ html {
 }
 
 header {
-  font-family: "Lato", sans-serif;
-  color: #D0EFB1;
+  font-family: "Merriweather", sans-serif;
+  color: #E6EBE0;
 }
 
 body {
@@ -17,13 +17,13 @@ h1 {
   font-size: 2.5rem;
   font-weight: 700;
   font-family: "Montserrat", sans-serif;
-  color: #4D7298;
+  color: #353B3C;
 }
 
 h2 {
   font-size: 2rem;
   font-family: "Montserrat", sans-serif;
-  color: #4D7298;
+  color: #353B3C;
 
 }
 
@@ -31,7 +31,7 @@ h3 {
   font-size: 1rem;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  color: #4D7298;
+  color: #353B3C;
 }
 
 h4 {
@@ -39,13 +39,18 @@ h4 {
   font-weight: 400;
   margin-bottom: 0px;
   font-family: "Montserrat", sans-serif;
-  color: #4D7298;
+  color: #353B3C;
 
 }
 
-p, a {
-  font-family: "Merriweather", sans-serif;
-color: #77A6B6;
+p {
+  font-family: "Lato", sans-serif;
+color: #353B3C;
+}
+
+a {
+  font-family: "Lato", sans-serif;
+  color: #846A6A;
 }
 
 
@@ -59,7 +64,8 @@ header {
   height: 64px;
   padding-right: 24px;
   padding-left: 24px;
-  background-color: #77A6B6;
+  background-color: #C6C7C4;
+  color: #846A6A;
 }
 
 nav span {
@@ -79,7 +85,7 @@ nav span {
 /* First Section  */
 
 .section-1 {
-  background-color: #B3D89C;
+  background-color: #EEF0F2;
   display: flex;
   align-items: center;
 }
@@ -108,13 +114,13 @@ button {
   display: flex;
   width: 65%;
   justify-content: center;
-  background-color: #4D7298;
+  background-color: #A2999E
 
 }
 
 button h3 {
   font-weight: 400;
-  color: #D0EFB1;
+  color: #EEF0F2;
 }
 
 /* Second Section */
@@ -128,6 +134,11 @@ button h3 {
   flex-direction: column;
   max-width: 60%;
   padding: 32px 24px;
+}
+
+.subtext {
+  font-family: "Merriweather", serif;
+  font-size: 0.7rem;
 }
 
 .section-2 .column-2 {
@@ -152,7 +163,7 @@ button h3 {
 }
 
 .section-2 .row-3 {
-  background-color: #D0EFB1;
+  background-color: #EEF0F2;
 }
 
 .row-content {
@@ -167,7 +178,7 @@ button h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #D0EFB1;
+  background-color: #EEF0F2;
 }
 
 .section-3 h2 {
@@ -195,7 +206,7 @@ button h3 {
 }
 
 .grid-item h4, .grid-item p {
-  color: #4D7298;
+  color: #1B2021;
 }
 
 .grid-item img {
@@ -244,7 +255,7 @@ video {
 }
 
 .section-4 .row-one {
-  background-color: #D0EFB1;
+  background-color: #EEF0F2;
 }
 
 .section-4 .main-content {
@@ -260,10 +271,16 @@ video {
 /* Footer  */
 
 footer {
-  border-top: 1px solid #D0EFB1;
+  border-top: 1px solid #EEF0F2;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
   padding: 16px 24px ;
   height: 64px;
+  font-family: "Merriweather", serif;
+  color: #846A6A;
+  font-size: 0.8rem;
+}
+
+footer span {
+  padding: 16px;
 }
